@@ -1,7 +1,7 @@
 ﻿//
-// DotNetNuke - http://www.christoc.com
+// MultiFunction - http://www.christoc.com
 // Copyright (c) 2011-2013
-// by Chris Hammond
+// by Christoc.com
 //
 // Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated 
 // documentation files (the "Software"), to deal in the Software without restriction, including without limitation 
