@@ -124,6 +124,7 @@ a, a:hover, a:active, a:link, a:visited
 /*skin positioning*/
 #BodyWrapper
 {
+    min-width: 1200px;
     width: 100%;
     margin: 0 auto;
     height: auto !important;
@@ -187,6 +188,7 @@ a, a:hover, a:active, a:link, a:visited
 .UserLogin
 {
     text-align: right;
+    width: 350px;
     max-width: 350px;
     float: right;
     height: 32px;
