@@ -12,6 +12,8 @@
 		<ul>
 			<li>Changed doctype to HTML5 for all skin layouts.</li>
 			<li>Fixed invalid HTML for the FooterPicture div.</li>
+			<li>Changed copyright statements and license to Christoc.com.</li>
+			<li>Fixed CSS issue with .UserLogin that was causing the Register and Login links to not display.</li>
 		</ul>
 	</p>
 
